BLRBT-11: Fixed styling and default left align

--- a/assets/source/css/frontend/abstracts/variables/_page-sections.scss
+++ b/assets/source/css/frontend/abstracts/variables/_page-sections.scss
@@ -29,7 +29,7 @@ $span-sidebar-secondary: 7 !default;
 $span-sidebar-combined: 8 !default;
 
 /// The alignment of header in mobile view
-$mobile-header-alignment: right !default;
+$mobile-header-alignment: left !default;
 
 
 
